# board-game-rs

./: .gitignore  Cargo.toml  Readme.md  build.rs
.github/workflows/: rust.yml
src/: board.rs  interface.rs  lib.rs  pov.rs  solve_ataxx.rs  symmetry.rs  uai.rs  wdl.rs
src/ai/: mcts.rs  minimax.rs  mod.rs  simple.rs  solver.rs
src/games/: arimaa.rs  chess.rs  connect4.rs  dummy.rs  go.rs  max_length.rs  mod.rs  monster_chess.rs  oware.rs  sttt.rs  ttt.rs
src/games/ataxx/: backwards.rs  board.rs  io.rs  mod.rs  mv.rs  tiles.rs
src/games/go/: board.rs  chains.rs  hash.rs  io.rs  link.rs  mod.rs  rules.rs  stack_vec.rs  tile.rs  util.rs
src/games/scrabble/: basic.rs  board.rs  grid.rs  mod.rs  movegen.rs  zobrist.rs
src/heuristic/: ataxx.rs  chess.rs  mod.rs  sttt.rs
src/interface/: aei.rs  gtp.rs  mod.rs
src/interface/gtp/: command.rs  engine.rs  mod.rs
src/interface/uai/: client.rs  command.rs  mod.rs
src/uai/: client.rs  command.rs
src/util/: bitboard.rs  bits.rs  board_gen.rs  bot_game.rs  coord.rs  game_stats.rs  internal_ext.rs  iter.rs  mask.rs  mod.rs  pathfind.rs  rating.rs  stack_vec.rs  tiny.rs
tests/: mod.rs  util.rs
tests/ai/: is_double_forced_draw.rs  mod.rs  solver.rs
tests/board/: arimaa.rs  ataxx.rs  chess.rs  connect4.rs  go.rs  go_chains.rs  max_moves.rs  mod.rs  oware.rs  scrabble.rs  sttt.rs  ttt.rs
tests/perft/: ataxx.rs  chess.rs  mod.rs
