[package]
name = "board-game"
version = "0.8.2"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
description = "A board game abstraction and generic utilities around it."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["board", "ai", "ataxx", "sttt"]
categories = ["algorithms", "games"]
repository = "https://github.com/KarelPeeters/board-game-rs"

# TODO feature per game
# TODO check cargo tree and try to shorten
[features]
default = []
game-arimaa = ["dep:arimaa_engine_step"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.10.5"
decorum = { version = "0.3.1", default-features = false }
internal-iterator = "0.2.1"
num-traits = "0.2.15"
nom = "7.1.3"
rand_xoshiro = "0.6.0"
cast_trait = "0.1.2"
num_cpus = "1.15.0"

cozy-chess = "0.3.2"
arimaa_engine_step = { version = "1.0.1", optional=true } # , path = "../arimaa-engine-step"
once_cell = "1.18.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"
nohash-hasher = "0.2.0"

[profile.release]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true
