[package]
name = "board-game"
version = "0.8.2"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
description = "A board game abstraction and generic utilities around it."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["board", "ai", "ataxx", "sttt"]
categories = ["algorithms", "games"]
repository = "https://github.com/KarelPeeters/board-game-rs"

[features]
default = []
game-arimaa = ["dep:arimaa_engine_step"]

[dependencies]
cast_trait = "0.1.2"
decorum = { version = "0.3.1", default-features = false }
internal-iterator = "0.2.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
nohash-hasher = "0.2.0"
nom = "7.1.3"
num-traits = "0.2.15"
num_cpus = "1.15.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"
static_assertions = "1.1.0"

regex-lite = "0.1.0"

cozy-chess = "0.3.2"
arimaa_engine_step = { version = "1.0.1", optional=true } # , path = "../arimaa-engine-step"

[profile.release]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true
