[package]
name = "board-game"
version = "0.8.2"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
description = "A board game abstraction and generic utilities around it."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["board", "ai", "ataxx", "sttt"]
categories = ["algorithms", "games"]
repository = "https://github.com/KarelPeeters/board-game-rs"

[features]
game_chess = ["dep:chess"]
game_arimaa = ["dep:arimaa_engine_step", "dep:once_cell"]
game_sttt = []
game_ttt = []
game_ataxx = []
game_oware = []
game_connect4 = []
game_go = ["dep:nohash-hasher", "dep:static_assertions", "dep:lazy_static"]
game_all = [
    "game_chess",
    "game_arimaa",
    "game_sttt",
    "game_ttt",
    "game_ataxx",
    "game_go",
    "game_oware",
    "game_connect4",
]

default = ["game_all"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.10.5"
decorum = { version = "0.3.1", default-features = false }
internal-iterator = "0.2.1"
num-traits = "0.2.15"
nom = "7.1.3"
rand_xoshiro = "0.6.0"
cast_trait = "0.1.2"
num_cpus = "1.15.0"

# TODO the chess crate is heavy (and takes a long time to build, see below "temp fix"), maybe replace it with
#  cozy-chess or shakmaty
chess = { version = "3.2.0", optional = true }
arimaa_engine_step = { version = "1.0.1", optional = true } # , path = "../arimaa-engine-step"
once_cell = { version = "1.18.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
static_assertions = { version = "1.1.0", optional = true }
nohash-hasher = { version = "0.2.0", optional = true }

# temporary fix until https://github.com/jordanbray/chess/pull/67 is merged
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.release]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "bench"
required-features = ["game_ataxx", "game_chess", "game_sttt"]

[[bin]]
name = "go_split_perft"
required-features = ["game_go"]
